plugins {
    id 'java-library'
    id 'io.spring.javaformat' version '0.0.42'
    id 'jacoco'
}

group 'com.transferwise.com'
version '0.3.0'

repositories {
    mavenCentral()
}

dependencies {
    api('org.springframework:spring-context:6.1.10') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    api 'com.ibm.icu:icu4j:75.1'
    dependencies {
        testImplementation(platform("org.junit:junit-bom:5.10.3"))
    }
    testImplementation 'org.thymeleaf:thymeleaf-spring5:3.0.11.RELEASE'
    testImplementation 'org.thymeleaf:thymeleaf:3.0.11.RELEASE'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.junit.jupiter:junit-jupiter-params'
}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaLanguageVersion.of(17)
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
        vendor = JvmVendorSpec.ADOPTIUM
    }
}